# sentiment_classification

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
notebooks/: 1-Datasest.ipynb  1-Dataset.ipynb  2-Model.ipynb
