[tool.poetry]
name = "sentiment_classification"
version = "0.1.0"
description = ""
authors = ["Damian Mirecki <dmirecki.dm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
jupyterlab = "3.0.3"
ipywidgets = "7.6.3"
numpy = "1.19.5"
pandas = "1.2.0"
tqdm = "^4.55.1"
scikit-learn = "0.24.0"
beautifulsoup4 = "^4.9.3"
shap = "^0.37.0"
matplotlib = "^3.3.3"
stopwordsiso = "^0.6.1"
fasttext = "0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
